<resources>
    <string name="app_name">tdfsurveyapplication</string>
    <string name="comments_label">Any comments</string>
    <string name="investigator_code_label">Enter Investigator Code:</string>
    <string-array name="village_list">
        <item>Rajur</item>
        <item>Hadsar</item>
        <item>Unde Khadak</item>
        <item>Kewadi</item>
        <item>Nimgiri</item>
        <item>Khatkale</item>
        <item>Devle</item>
        <item>Ghatgar</item>
        <item>Taleran</item>
        <item>Kopre</item>
        <item>Mandve</item>
        <item>Muthalne</item>
    </string-array>
    <string name="login_button_label">Login</string>
    <string name="question_zero_1">Respondent\'s name:</string>
    <string name="question_zero_2">Gender:</string>
    <string name="question_zero_3">Year of Joining:</string>
    <string name="question_zero_4">Contact Number (Mobile):</string>
    <string name="question_one_1">Religion</string>
    <string-array name="religion_list">
        <item>Hindu</item>
        <item>Muslim</item>
        <item>Christian</item>
        <item>Buddhist</item>
        <item>do not know</item>
        <item>Will not say</item>
        <item>Other</item>
    </string-array>
    <string name="question_one_2">What is your caste?</string>
    <string-array name="caste_list">
        <item>Scheduled Caste(SC)</item>
        <item>Scheduled Tribe(ST)</item>
        <item>Other Backward Classes(OBC)</item>
        <item>Other</item>
        <item>Will not say</item>
    </string-array>
    <string name="question_one_2_sub_1">Name of Tribe:</string>
    <string-array name="tribe_list">
        <item>Bhil</item>
        <item>Kathodi</item>
        <item>Koli</item>
        <item>Bhil</item>
        <item>Katkari</item>
        <item>Dongar</item>
        <item>Other</item>
    </string-array>
    <string name="question_one_3">Total annual income of the family(Gross)</string>
    <string-array name="income_list">
        <item>less than 25000</item>
        <item>25001\-50000</item>
        <item>50001\-100000</item>
        <item>100001\-150000</item>
        <item>150001\-250000</item>
        <item>250001\-500000</item>
        <item>greater than 500000</item>
    </string-array>
    <string name="question_one_4">How many people live in this household?</string>
    <string name="question_one_5">How many members have MGNREGA card?</string>
    <string name="question_one_5_male_label">Male:</string>
    <string name="question_one_5_female_label">Female:</string>
    <string name="question_one_6">What is the type of Ration Card is possessed by household?</string>
    <string-array name="ration_card_type_list">
        <item>APL</item>
        <item>BPL</item>
        <item>Antyodhaya</item>
        <item>Priority Household</item>
        <item>Other</item>
        <item>None</item>
    </string-array>
    <string name="question_one_7">How many members in the household have Aadhar card?</string>
    <string name="question_one_8">Electricity:</string>
    <string-array name="electricity_place_list">
        <item>At House</item>
        <item>At Farm</item>
        <item>None</item>
    </string-array>
    <string name="question_one_9">Number of members of household who are member of SHG:</string>
    <string name="question_two_sub_1">Name</string>
    <string name="question_two_sub_2">Age</string>
    <string name="question_two_sub_3">Education</string>
    <string name="question_two_sub_4">Occupation</string>
    <string name="question_two_sub_5">Income (Rs.)</string>
    <string name="before">Before getting TDF</string>
    <string name="after">After getting TDF</string>
    <string name="question_three_1">Name</string>
    <string name="question_three_2">Age</string>
    <string name="question_three_3">Gender</string>
    <string name="question_three_4">Education</string>
    <string name="question_three_5">Occupation</string>
    <string name="question_three_6">Income</string>
    <string name="before_tdf_label">Before TDF</string>
    <string name="after_tdf_label">After TDF</string>
    <string name="question_three_7">Occupation of Beneficiary</string>
    <string name="question_three_8">Major:</string>
    <string name="question_three_9">Minor:</string>
    <string name="question_three_10">Number of family member details to add</string>
    <string name="question_four_sub_1">Tractor without plougher</string>
    <string name="question_four_sub_2">Tractor with plougher</string>
    <string name="question_four_sub_3">Trolley</string>
    <string name="question_four_sub_4">Manual Sprayer</string>
    <string name="question_four_sub_5">Power Sprayer</string>
    <string name="question_four_sub_6">Open Well</string>
    <string name="question_four_sub_7">Tube Well</string>
    <string name="question_four_sub_8">Cattle Shed</string>
    <string name="question_four_sub_9">Farm Building</string>
    <string name="question_four_sub_10">Bullock Cart</string>
    <string name="question_four_sub_11">Fodder Chopper</string>
    <string name="question_four_sub_12">Electric Pump</string>
    <string name="question_four_sub_13">Diesel Pump</string>
    <string name="question_four_sub_14">Plougher Equipments Wooden</string>
    <string name="question_four_sub_15">Plougher Iron Equipments</string>
    <string name="question_four_sub_one_1">I/J</string>
    <string name="question_four_sub_one_2">No.</string>
    <string name="question_four_sub_one_3">Current Value in Rs</string>
    <string name="question_four_sub_21">Cow</string>
    <string name="question_four_sub_22">Calf</string>
    <string name="question_four_sub_23">Cow(Cross Breed)</string>
    <string name="question_four_sub_24">Buffalo</string>
    <string name="question_four_sub_25">Sheep</string>
    <string name="question_four_sub_26">Goat</string>
    <string name="question_four_sub_27">Poultry</string>
    <string name="question_four_sub_28">Bullock</string>
    <string name="question_four_sub_29">Others</string>
    <string name="question_four_sub_30">Other Assets</string>
    <string name="question_four_sub_31">Type of House(Codes)</string>
    <string name="question_four_sub_32">No of rooms</string>
    <string name="question_four_sub_33">No of TVs owned</string>
    <string name="question_four_sub_34">No of Mobile Phones</string>
    <string name="question_four_sub_35">Cycle</string>
    <string name="question_four_sub_36">Motor Cycle</string>
    <string name="question_four_sub_37">Car</string>
    <string name="question_four_sub_38">Refrigerator</string>
    <string name="question_five_1">Facility of Drinking water in house</string>
    <string name="question_five_one_1">How far is the water source?</string>
    <string name="question_five_one_2">Who goes to fetch the water?</string>
    <string name="question_five_2">Toilet Facility in the house</string>
    <string name="question_five_two_1">Duration of use in months</string>
    <string-array name="water_resource">
        <item>None</item>
        <item>Tap Water</item>
        <item>Hand-pump</item>
        <item>Own Well</item>
        <item>Bore Well</item>
        <item>Others(please specify)</item>
    </string-array>
    <string-array name="water_resource_distance">
        <item>0-1Km</item>
        <item>2Km</item>
        <item>3Km</item>
        <item>Others(please specify)</item>
    </string-array>
    <string name="question_seven">Choose owned Animal Husbandry Components</string>
    <string name="question_seven_1">Milk</string>
    <string name="question_seven_2">Meat</string>
    <string name="question_seven_3">Eggs</string>
    <string name="question_seven_4">Manure</string>
    <string name="question_seven_5">Dung Cake</string>
    <string name="question_seven_6">Animal Sale</string>
    <string name="question_seven_7">Others</string>
    <string name="question_seven_own_consumption">Own Consumption</string>
    <string name="question_seven_for_sell">For sell</string>
    <string name="question_nine_item_1">Seri Culture</string>
    <string name="question_nine_item_2">Agricultural Label</string>
    <string name="question_nine_item_3">Non-Agricultural Label</string>
    <string name="question_nine_item_4">Forestry</string>
    <string name="question_nine_item_5">Fishing</string>
    <string name="question_nine_item_6">MGNERA</string>
    <string name="question_nine_item_7">Director Benefit Transfer</string>
    <string name="question_nine_item_7_sub">Duration of credit time:</string>
    <string name="question_nine_item_8">Kisan Samnam yojna</string>
    <string name="question_nine_item_9">Loan Waiver</string>
    <string name="question_nine_item_10">Other</string>
    <string name="question_1">Earning from activities</string>
    <string name="question_2">Paid-out costs</string>
    <string name="question_eight_1">Frequency</string>
    <string name="question_eight_2">Rs/month</string>
    <string name="question_eight_3">Source</string>
    <string name="question_eight_item_1">Rice</string>
    <string name="question_eight_item_2">Wheat</string>
    <string name="question_eight_item_3">Vegetable</string>
    <string name="question_eight_item_4">Pulses</string>
    <string name="question_eight_item_5">Fruits</string>
    <string name="question_eight_item_6">Milk</string>
    <string name="question_eight_item_7">Eggs</string>
    <string name="question_eight_item_8">Fish</string>
    <string name="question_eight_item_9">Meat</string>
    <string name="question_eight_item_10">Pan,tobacco,intoxicant</string>
    <string name="question_eight_item_11">Fuel and Light</string>
    <string name="question_eight_item_12">Medical</string>
    <string name="question_eight_item_13">Education</string>
    <string name="question_eight_item_14">Minor duration type goods</string>
    <string name="question_eight_item_15">Entertainment and conveyence</string>
    <string name="question_eight_item_16">Rent</string>
    <string name="question_eight_item_17">Clothing</string>
    <string name="question_eight_item_18">Bedding</string>
    <string name="question_eight_item_19">Footwear</string>
    <string name="question_eight_item_20">Durable goods</string>
    <string name="question_fifteen_1">Cashew Grafts</string>
    <string name="question_fifteen_2">Mango Grafts</string>
    <string name="question_fifteen_3">Hirda Grafts</string>
    <string name="question_fifteen_4">Chemical Fertilizer</string>
    <string name="question_fifteen_5">Farm equipment</string>
    <string name="question_fifteen_6">Organic Fertilizer</string>
    <string name="question_fifteen_7">Forestry Seedling</string>
    <string name="question_fifteen_8">Pesticides/Insecticides</string>
    <string name="question_fifteen_9">Pots of irrigation</string>
    <string name="question_fifteen_10">Seeds for fencing</string>
    <string name="question_fifteen_11">Spray pump</string>
    <string name="question_fifteen_sub_1">How many mango plants survived?</string>
    <string name="question_fifteen_sub_2">How many cashew plants survived?</string>
    <string name="question_fifteen_sub_3">How many hirda plants survived?</string>
    <string name="question_fifteen_sub_4">Do you get working charges for these plants?</string>
    <string name="question_fifteen_sub_5">Do you get labor charges for working for these plants</string>
    <string name="question_six_1">Owned Land</string>
    <string name="question_six_2">Leased-In Land</string>
    <string name="question_six_3">Leased-Out Land</string>
    <string name="question_six_4">Total Land Possessed</string>
    <string name="question_six_5">Cultivated Area</string>
    <string name="question_six_6">Irrigation Area</string>
    <string name="question_six_7">Barren Land which cannot be brought under cultivation (acres)</string>
    <string name="question_six_8">Pasture Grazing Land(acres)</string>
</resources>