<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdf.tdfapplication.HouseholdConsumptionList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/animal_husbandry_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="10dp"
            android:text="Choose consumed household items:"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_eight_item_1"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_2"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_3"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_4"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_5"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_6"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_7"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_8"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_eight_item_9"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_10"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_11"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_12"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_13"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_14"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_15"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_16"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_17"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_18"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_19"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/item_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_eight_item_20"
            android:textSize="20sp"
            android:layout_marginLeft="8dp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="10"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:id="@+id/animal_husbandry_other_list" />
        <Button
            android:id="@+id/household_consumption_info_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>

</ScrollView>
