<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdf.tdfapplication.IrrigationListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/farm_asset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Choose the owned land holding"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_six_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_4"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_5"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_six_8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/irrigation_list_info_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>

