<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tdf.tdfapplication.OtherIncomeGeneratingList">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/other_income_generating_activities_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="36dp"
            android:text="Choose income generating activities:"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_nine_item_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_4"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_5"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_7"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:id="@+id/duration_of_credit_time_label"
            android:text="@string/question_nine_item_7_sub"/>

        <EditText
            android:id="@+id/duration_of_credit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:minEms="10"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_8"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_nine_item_9"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/item_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/question_nine_item_10"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/other_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:minEms="10"
            android:visibility="gone" />

        <Button
            android:id="@+id/household_consumption_info_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>
